# yolo26-cspine-pose

./: .gitignore  CITATION.cff  README.md  _rerun_loso_val.py  _rerun_transfer_WJ_val.py  ablation_visualization.py  compute_errors.py  evaluate_parameters.py  evaluate_parameters2.py  evaluate_parameters3.py  evaluate_parameters4.py  evaluate_parameters5.py  evaluate_parameters6.py  evaluate_parameters_README.md  export_onnx.py  infer_yolo.py  kp_schema.py  measure_inference_time.py  pyproject.toml  requirements.txt  step0_prepare_data.py  step1_make_loso_splits.py  step2_run_loso_train.py  step3_run_transfer_train.py  step4_collect_results.py  step5_demographics.py  train_ablation_all.py  train_cervical_pose.py  train_dpca.py  train_dpca_ablation.py  train_generalization.py  validate_DPCA.py  validate_ablation.py  validate_generalization.py
data/: augment.py  dataset.py  utils.py
engine/: results.py
loso_configs/image_lists/: README.md
loso_configs/loso/: loso_test_GD.yaml  loso_test_HB.yaml  loso_test_SX.yaml  loso_test_TJ.yaml  loso_test_VD.yaml  loso_test_WJ.yaml
loso_configs/single_source/: single_GD.yaml  single_HB.yaml  single_SX.yaml  single_TJ.yaml  single_VD.yaml  single_WJ.yaml
models/yolo/pose/: train.py
nn/: tasks.py
nn/modules/: __init__.py  block.py
tests/: test_smoke.py
trackers/: README.md  bot_sort.py  byte_tracker.py
trackers/utils/: kalman_filter.py
